--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -47,7 +47,7 @@
   
       <!-- credit-card -->
   
-      <img src="{{imageUrl}}/uploads/credit-card.png" alt="No IMG" style="width: 240px;">
+      <img src="https://localhost:44324//uploads/credit-card.png" alt="No IMG" style="width: 240px;">
       <div>
         <div class="icons">
           <img src="https://img.icons8.com/color/48/000000/visa.png" />
@@ -93,9 +93,9 @@
           <div class="card-footer">
             <div class="row">
               <button (click)="payment()" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                <img src="{{imageUrl}}/uploads/yellowCard.png" alt="No IMG" style="width: 40px;">
-                <img src="{{imageUrl}}/uploads/redCard.png" alt="No IMG" style="width: 40px;">
-                <img src="{{imageUrl}}/uploads/blueCard.png" alt="No IMG" style="width: 40px;">
+                <img src="https://localhost:44324//uploads/yellowCard.png" alt="No IMG" style="width: 40px;">
+                <img src="https://localhost:44324//uploads/redCard.png" alt="No IMG" style="width: 40px;">
+                <img src="https://localhost:44324//uploads/blueCard.png" alt="No IMG" style="width: 40px;">
                 <strong>{{ amount | currency }} PAY </strong>
               </button>
             </div>
